# wren

./: .clang-format  .clang-tidy  .envrc  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  a.out  cmake-format.yaml  codecov.yml  compile_commands.json  conanfile.txt  coverage.info  flake.nix  imgui.ini  justfile  meson.build  meson_options.txt  mkdocs.yml  xmake.lua
.builds/: fedora.yml  fedora.yml.bak  nixos.yml  site.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  coverage.yml  deploy_docs.yml  flake_update.yml
.helix/: languages.toml
docs/: ecs.md  editor.md  event.md  index.md  materials.md  math.md  render_graphs.md  scripting.md  spirv.md  text-rendering.md  vulkan.md
docs/doxygen/: gui.md  header.html
editor/: CMakeLists.txt  meson.build
editor/assets/shaders/: editor_grid.wren_shader  editor_mesh.slang  editor_mesh.wren_shader
editor/src/: camera.hpp  context.hpp  editor.cpp  editor.cppm  editor.hpp  filesystem_panel.cpp  filesystem_panel.cppm  filesystem_panel.hpp  inspector_panel.cpp  inspector_panel.cppm  inspector_panel.hpp  main.cpp  scene_panel.cpp  scene_panel.hpp  ui.cpp  ui.hpp
editor/src/shaders/: editor_scene.hpp
examples/: meson.build
examples/nand/: main.cpp  meson.build
examples/nand/assets/shaders/: mesh.wren_shader
res/: mesh.vert  mesh.vert.asm
subprojects/: .gitignore  flecs.wrap  vulkan-memory-allocator.wrap
subprojects/packagefiles/imgui-docking/: meson.build
wren/: CMakeLists.txt  meson.build
wren/include/wren/: application.hpp  buffer.hpp  context.hpp  event.hpp  graph.hpp  graph_builder.hpp  graphics_context.hpp  keycode.hpp  mesh.hpp  mesh_loader.hpp  pipeline.hpp  render_pass.hpp  render_target.hpp  renderer.hpp  shader.hpp  window.hpp
wren/include/wren/assets/: manager.hpp
wren/include/wren/scene/: components.hpp  deserialization.hpp  entity.hpp  scene.hpp  serialization.hpp
wren/include/wren/scene/components/: collider.hpp  mesh.hpp  tag.hpp  transform.hpp
wren/include/wren/shader_reflection/: parser.hpp
wren/include/wren/shaders/: mesh.hpp  triangle.hpp
wren/include/wren/utils/: device.hpp  enums.hpp  errors.hpp  macros.hpp  queue.hpp  spirv.hpp  spirv_cross.hpp  tracy.hpp  vulkan.hpp  vulkan_errors.hpp
wren/src/: application.cpp  buffer.cpp  buffer.cppm  event.cpp  graph.cpp  graphics_context.cpp  mesh.cpp  mesh_loader.cpp  meson.build  pipeline.cpp  render_pass.cpp  render_target.cpp  renderer.cpp  shader.cpp  window.cpp
wren/src/assets/: manager.cpp
wren/src/scene/: components.cpp  deserialization.cpp  scene.cpp  serialization.cpp
wren/src/scene/components/: collider.cpp
wren/src/shader_reflection/: parser.cpp
wren/src/utils/: device.cpp  queue.cpp  spirv.cpp  vulkan.cpp  vulkan_errors.cpp
wren_ecs/: meson.build
wren_ecs/include/wren/ecs/: archetype.hpp  component.hpp  entity.hpp  manager.hpp
wren_ecs/tests/: ecs.cpp  meson.build
wren_gltf/: meson.build
wren_gltf/include/wren/gltf/: gltf.hpp
wren_gltf/src/: gltf.cpp
wren_gui/: CMakeLists.txt  meson.build
wren_gui/include/wren_gui/: instance.hpp  renderer.hpp  shader.hpp
wren_gui/src/: instance.cpp
wren_math/: meson.build
wren_math/include/wren/math/: geometry.hpp  matrix.hpp  quaternion.hpp  utils.hpp  vector.hpp
wren_math/include/wren_math/: geometry.hpp  matrix.hpp  utils.hpp  vector.hpp
wren_math/include/wrenm/: matrix.hpp
wren_math/src/: geometry.cpp  utils.cpp  vector.cpp
wren_math/tests/: geometry.cpp  matrix.cpp  meson.build  vector.cpp
wren_physics/: meson.build
wren_physics/include/wren/physics/: ray.hpp
wren_physics/src/: ray.cpp
wren_physics/tests/: meson.build  raycast.cpp
wren_reflect/: CMakeLists.txt  meson.build
wren_reflect/include/wren/reflect/: reflect.hpp
wren_reflect/include/wren_reflect/: parser.hpp  spirv.hpp  spirv_reflect.h
wren_reflect/src/: parser.cpp  reflect.cpp  spirv.cpp  spirv_reflect.cpp
wren_reflect/tests/: editor.slang  meson.build  parser.cpp  reflect.cpp
wren_text/: CMakeLists.txt  meson.build
wren_text/include/wren_text/: font.hpp
wren_text/src/: font.cpp
wren_utils/: CMakeLists.txt  meson.build
wren_utils/include/wren/utils/: binary_reader.hpp  binray_reader.hpp  boost_test.hpp  enums.hpp  errors.hpp  filesystem.hpp  macros.hpp  result.hpp  string.hpp  string_reader.hpp
wren_utils/include/wren_utils/: enums.hpp  errors.hpp  format.hpp
wren_utils/src/: errors.cpp  filesystem.cpp  result.cpp  string.cpp  string_reader.cpp
wren_utils/tests/: binary_reader.cpp  enums.cpp  meson.build  string_reader.cpp
wren_vk/: CMakeLists.txt  meson.build
wren_vk/include/wren/vk/: buffer.hpp  errors.hpp  image.hpp  result.hpp  shader.hpp
wren_vk/include/wren_vk/: buffer.hpp  errors.hpp  image.hpp  shader.hpp
wren_vk/src/: buffer.cpp  errors.cpp  image.cpp  memory.cpp  shader.cpp
wrenm/: CMakeLists.txt  meson.build
wrenm/include/wrenm/: geometry.hpp  matrix.hpp  utils.hpp  vector.hpp
wrenm/src/: geometry.cpp  utils.cpp
wrenm/tests/: CMakeLists.txt  utils.hpp  vector.cpp
