wren = library(
    'wren',
    files(
        'src/application.cpp',
        'src/assets/manager.cpp',
        'src/event.cpp',
        'src/graph.cpp',
        'src/graphics_context.cpp',
        'src/mesh.cpp',
        'src/mesh_loader.cpp',
        'src/pipeline.cpp',
        'src/render_pass.cpp',
        'src/renderer.cpp',
        'src/scene/deserialization.cpp',
        'src/scene/scene.cpp',
        'src/scene/serialization.cpp',
        'src/utils/device.cpp',
        'src/utils/queue.cpp',
        'src/utils/vulkan.cpp',
        'src/window.cpp',
    ),
    include_directories: ['include', 'include/wren'],
    dependencies: [
        flecs,
        vulkan,
        wren_vk_dep,
        wren_reflect_dep,
        wrenm_dep,
        spdlog,
        sdl2,
        tracy,
        toml,
    ],
    install: true,
)
wren_dep = declare_dependency(
    include_directories: 'include',
    link_with: wren,
    dependencies: [
        flecs,
        vulkan,
        wren_vk_dep,
        wren_reflect_dep,
        wrenm_dep,
        spdlog,
        sdl2,
    ],
)
