sources += files(
    'shader_reflection/parser.cpp',
    'utils/device.cpp',
    'utils/queue.cpp',
    'utils/spirv.cpp',
    'utils/vulkan.cpp',
    'utils/vulkan_errors.cpp',
    'application.cpp',
    'graph.cpp',
    'graphics_context.cpp',
    'render_pass.cpp',
    'renderer.cpp',
    'shader.cpp',
    'window.cpp',
)
